@@ -3,6 +3,9 @@ Released on 2020-10-05?
 ======================================
 
 
+bpo-41468: Improve IDLE run crash error message (which users should
+never see).
+
 bpo-41373: Save files loaded with no line ending, as when blank, or
 different line endings, by setting its line ending to the system
 default. Fix regression in 3.8.4 and 3.9.0b4.
